--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.3",
-    "vite": "^7.0.4"
-  }
+    "vite": "^7.1.2"
+  },
+  "dependencies": {
+    "vitest": "^3.2.4"
+  },
+  "homepage": "https://deiversonmap.github.io/ICELatro/"
 }
