--- a/package.json
+++ b/package.json
@@ -17,5 +17,5 @@
   "dependencies": {
     "vitest": "^3.2.4"
   },
-  "homepage": "https://deiversonmap.github.io/ICELatro/"
+  "homepage": "https://github.com/ufjf-dcc206/ufjf-dcc206-2025-1-a-trb-deiverson-team/"
 }
