--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "icelatro",
+  "name": "ufjf-dcc206-2025-1-a-trb-deiverson-team",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,5 +17,5 @@
   "dependencies": {
     "vitest": "^3.2.4"
   },
-  "homepage": "https://github.com/ufjf-dcc206/ufjf-dcc206-2025-1-a-trb-deiverson-team"
+  "homepage": "https://github.com/ufjf-dcc206/ufjf-dcc206-2025-1-a-trb-deiverson-team/"
 }
